[package]
name = "orchestrator_lock"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A Mutex whose access order is managed by a separate thread"
repository = "https://github.com/davidspies/orchestrator_lock"

[dependencies]
relay_channel = "0.1.1"
tokio = { version = "1.43.0", features = ["macros", "sync"] }
tokio-util = "0.7.13"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "time"] }
