[package]
name = "orchestrator_lock"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A Mutex whose access order is managed by a separate thread"
repository = "https://github.com/davidspies/orchestrator_lock"

[dependencies]
awaitable-bool = "0.1.4"
relay_channel = { git = "https://github.com/davidspies/relay_channel", branch = "poll-send" }
tokio = { version = "1.43.0", features = ["macros", "sync"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "time"] }
